--- a/html/about.html
+++ b/html/about.html
@@ -69,22 +69,31 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Justin Hartfield</span></p>
-                      <p><span class="title-s">Email: </span> <span>JustinHartfield1@gmail.com</span></p>
+                      <p><span class="title-s" style="font-size: 24px;">Justin Hartfield</span></p>
+<p><span class="title-s">Contact Information</span></p>
+<p><span><a href="mailto:JustinHartfield1@gmail.com" style="color: #007BFF; text-decoration: underline;">JustinHartfield1@gmail.com</a></span></p>
+<p><span><a href="https://www.linkedin.com/in/justin-hartfield" target="_blank" style="color: #007BFF; text-decoration: underline;">www.linkedin.com/in/justin-hartfield</a></span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Programming Skills</p>
-                  <span>Python, SQL, Java, C++, C#, JavaScript, HTML/CSS</span>
-                  <br> </br>
-                  <p class="title-s">Leadership and Extracurriculars</p>
+                  <p class="title-s" style="font-size: 24px;">Programming Skills</p>
+    <p class="title-s" style="font-size: 20px;">Languages:</p>
+    <span>Python, JavaScript, Java, C++, C#, HTML/CSS, SQL</span>
+    <br></br>
+    <p class="title-s" style="font-size: 20px;">Frameworks & Libraries:</p>
+    <span>React.js, Next.js, Django, Flask, Bootstrap, TailwindCSS, TensorFlow, NumPy, Pandas, PyTorch</span>
+    <br></br>
+    <p class="title-s" style="font-size: 20px;">Tools & Technologies:</p>
+    <span>Jenkins, Git, GitLab CI/CD, Jira, Virtual Machines, Selenium, Swagger, Grafana, PostgreSQL, MongoDB, AWS</span>
+    <br></br>
+                  <p class="title-s" style="font-size: 20px;">Leadership and Extracurriculars</p>
                   <p>Member of Software Developers Association (SoDA) <br>
                     Member of ASU Chess Club <br>
                     Member of ASU AI Club<br>
                     Member of the Phoenix Philanthropists volunteer group
                   </p>
-                  <p class="title-s">Resume</p>
+                  <p class="title-s" style="font-size: 20px;" >Resume</p>
                   <a href="../img/JustinHartfield.pdf">
                     <font color="blue"><u>Download resume</u></font>
                   </a>
@@ -99,20 +108,29 @@
                     </h5>
                   </div>
                   <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-                    Welcome! I’m <strong style="color: #007BFF;">Justin Hartfield</strong>, a passionate Software Engineer from Phoenix, Arizona. Since earning my bachelor's degree in Computer Science from Arizona State University in May 2020, I’ve been on a relentless quest to not just understand the code, but to master the art behind it. My journey in technology is driven by an insatiable curiosity and a deep-seated desire to make a lasting impact through my work.
-                  </p>
-                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-                    This portfolio is a window into my world. It’s where I showcase the milestones of my professional journey, the projects that have challenged me, and the innovations I’ve brought to life. From intricate algorithms to scalable systems, each page here tells a story of dedication, learning, and the pursuit of excellence.
-                  </p>
-                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-                    Here, you’ll find more than just code. You’ll discover the essence of my approach to software engineering—a blend of analytical thinking, creative problem-solving, and a commitment to pushing the boundaries of what’s possible with technology. I invite you to explore my projects, understand the challenges I’ve embraced, and see the solutions I’ve engineered with passion and precision.
-                  </p>
-                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-                    But life isn’t all about code. When I’m not behind a computer screen, I recharge by hitting the gym, exploring new destinations, and engaging in strategic games of chess and poker. I believe in a balanced life, where technology, health, and hobbies intersect to keep the mind sharp and the spirit vibrant.
-                  </p>
-                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-                    Thank you for visiting my portfolio. Whether you’re a fellow engineer, a potential collaborator, or just curious, I hope you find inspiration and insight within these pages. Let’s connect and explore how we can shape the future together, one line of code at a time.
-                  </p>
+    Welcome! I’m <strong style="color: #007BFF;">Justin Hartfield</strong>, a Software Engineer from Phoenix, Arizona. Since earning my bachelor's degree in Computer Science from Arizona State University in May 2020, I’ve been dedicated to mastering the art of coding.
+</p>
+<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+    This portfolio showcases my professional milestones, challenging projects, and innovations. Each project reflects my dedication, learning, and pursuit of excellence in software engineering.
+</p>
+<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+    Beyond code, I enjoy working out, traveling, and playing chess and poker.
+</p>
+<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+    Thank you for visiting my portfolio. Whether you’re a fellow engineer, potential collaborator, or just curious, I hope you find inspiration and insight here. Let’s connect and shape the future together, one line of code at a time.
+</p>
+<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+    <strong style="color: #007BFF;">Work History</strong>
+</p>
+<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+    <strong>iPro Tech – Tempe, AZ</strong>: SDET for eDiscovery company (2021-2024)
+</p>
+<ul style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+    <li>Developed and executed UI automation with Selenium and Playwright, using Python to validate product functionality through comprehensive testing.</li>
+    <li>Enhanced API testing by streamlining functional acceptance and regression tests in C#, maintaining consistent and reliable quality standards.</li>
+    <li>Integrated DevOps practices to streamline client, development, and test environment deployments. Established a robust CI/CD pipeline to improve efficiency throughout the software development lifecycle.</li>
+</ul>
+
                   
                 </div>
               </div>
