--- a/html/skills.html
+++ b/html/skills.html
@@ -1,116 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Justin Hartfield</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="" name="keywords" />
+    <meta content="" name="description" />
 
-<head>
-  <meta charset="utf-8">
-  <title>Justin Hartfield</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+    <link href="/img/favicon.png" rel="icon" />
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <link href="/img/favicon.png" rel="icon">
-  <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-  <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="/lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
+    <link
+      href="/lib/owlcarousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
 
-  <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/lib/animate/animate.min.css" rel="stylesheet">
-  <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <!-- Main Stylesheet File -->
+    <link href="/css/style.css" rel="stylesheet" />
 
-  <!-- Main Stylesheet File -->
-  <link href="/css/style.css" rel="stylesheet">
+    <style>
+      .text-left {
+        text-align: left;
+      }
+    </style>
+  </head>
 
-</head>
-
-<body id="page-top">
-
-  <nav class="navbar navbar-c navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll" href="../index.html">Portfolio</a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="skills.html">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="projects.html">Projects</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-<section id="service" class="services-mf route">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="title-box text-center">
-            <hr style="height:80px; visibility:hidden;" />
-
-
-            <h3 class="title-a">
-              Skills
-            </h3>
-            <p class="subtitle-a">
-              More about what I can do</p>
-            </p>
-            <div class="line-mf"></div>
-          </div>
+  <body id="page-top">
+    <nav
+      class="navbar navbar-c navbar-trans navbar-expand-md fixed-top"
+      id="mainNav"
+    >
+      <div class="container">
+        <a class="navbar-brand js-scroll" href="../index.html">Portfolio</a>
+        <button
+          class="navbar-toggler collapsed"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarDefault"
+          aria-controls="navbarDefault"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div
+          class="navbar-collapse collapse justify-content-end"
+          id="navbarDefault"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link js-scroll active" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="skills.html">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="projects.html">Projects</a>
+            </li>
+          </ul>
         </div>
       </div>
-      <div class="row">
-        
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Software Development</h2>
-              <p class="s-description text-center">
-                Experienced in crafting well-designed, efficient, and user-friendly software solutions. I possess a strong proficiency in a broad range of programming languages and frameworks, enabling me to adapt and excel in diverse development environments. My foundational knowledge in data structures and algorithms ensures that I approach problems with efficiency and innovation at the forefront.              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Web Development and Design</h2>
-              <p class="s-description text-center">
-                My journey in web development and design has equipped me with the skills to create and maintain robust websites from the ground up. I excel in implementing secure authorization and authentication systems, managing complex databases, and crafting responsive layouts. With a deep understanding of HTML, CSS, JavaScript, NextJS, Tailwind CSS, and modern frameworks, I ensure that web applications are not only functional but also visually appealing and user-friendly.              </p>
+    </nav>
+
+    <section id="service" class="services-mf route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <hr style="height: 80px; visibility: hidden" />
+              <h3 class="title-a">Skills</h3>
+              <p class="subtitle-a">More about what I can do</p>
+              <div class="line-mf"></div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="ion-code-working"></i></span>
+              </div>
+              <div class="service-content text-left">
+                <h2 class="s-title">Software Development</h2>
+                <div>
+                  <p class="s-description">
+                    <strong>Technologies:</strong> Python, Java, C++, C#,
+                    JavaScript, Git, Docker, Jenkins
+                  </p>
+                  <p class="s-description">
+                    <strong>Achievements:</strong> Created 20+ personal
+                    projects, extensively automated tests as an SDET
+                  </p>
+                  <p class="s-description">
+                    Experienced in crafting well-designed, efficient, and
+                    user-friendly software solutions. I possess a strong
+                    proficiency in a broad range of programming languages and
+                    frameworks, enabling me to adapt and excel in diverse
+                    development environments. My foundational knowledge in data
+                    structures and algorithms ensures that I approach problems
+                    with efficiency and innovation at the forefront.
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="service-content">
-              <h2 class="s-title">Cloud Computing and DevOpS</h2>
-              <p class="s-description text-center">
-                In the ever-evolving landscape of cloud computing and DevOps, I have honed my skills to architect scalable and resilient cloud infrastructure. My expertise encompasses managing cloud services, automating deployment pipelines, and ensuring continuous integration and delivery (CI/CD) practices. Familiar with leading cloud platforms such as AWS, Azure, and Google Cloud, I leverage these technologies to optimize workflows, enhance system reliability, and drive operational excellence.                <!-- When working in a team environment the ability to cultivate your idea to a group is absolutely vital.-->
-              </p>
+          </div>
+
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="ion-monitor"></i></span>
+              </div>
+              <div class="service-content text-left">
+                <h2 class="s-title">Web Development and Design</h2>
+                <div>
+                  <p class="s-description">
+                    <strong>Technologies:</strong> HTML, CSS, JavaScript,
+                    NextJS, Tailwind CSS, React.js, Node.js, Django, Flask
+                  </p>
+                  <p class="s-description">
+                    <strong>Achievements:</strong> Designed and maintained 10+
+                    responsive web applications with a strong focus on front-end
+                    aesthetics
+                  </p>
+                  <p class="s-description">
+                    My journey in web development and design has equipped me
+                    with the skills to create and maintain robust websites from
+                    the ground up. I excel in implementing secure authorization
+                    and authentication systems, managing complex databases, and
+                    crafting responsive layouts. With a deep understanding of
+                    HTML, CSS, JavaScript, NextJS, Tailwind CSS, and modern
+                    frameworks, I ensure that web applications are not only
+                    functional but also visually appealing and user-friendly.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"
+                  ><i class="ion-android-phone-portrait"></i
+                ></span>
+              </div>
+              <div class="service-content text-left">
+                <h2 class="s-title">Cloud Computing and DevOpS</h2>
+                <div>
+                  <p class="s-description">
+                    <strong>Technologies:</strong> AWS, Azure, Google Cloud,
+                    Kubernetes, Terraform, Jenkins, Docker
+                  </p>
+                  <p class="s-description">
+                    <strong>Achievements:</strong> Architected scalable cloud
+                    infrastructure for a variety of projects, automated multiple
+                    deployment pipelines
+                  </p>
+                  <p class="s-description">
+                    In the ever-evolving landscape of cloud computing and
+                    DevOps, I have honed my skills to architect scalable and
+                    resilient cloud infrastructure. My expertise encompasses
+                    managing cloud services, automating deployment pipelines,
+                    and ensuring continuous integration and delivery (CI/CD)
+                    practices. Familiar with leading cloud platforms such as
+                    AWS, Azure, and Google Cloud, I leverage these technologies
+                    to optimize workflows, enhance system reliability, and drive
+                    operational excellence.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </body>
+</html>
