--- a/html/MLproj.html
+++ b/html/MLproj.html
@@ -83,8 +83,9 @@
         This project showcases my passion for leveraging cutting-edge technology
         to solve real-world problems, embodied in a comprehensive NBA sports
         betting analysis tool. The application utilizes Next.js for the front
-        end and Amazon SageMaker for the backend, which powers the machine
-        learning model that predicts game outcomes with a 70% accuracy rate.
+        end and Amazon SageMaker + Python for the backend, which powers the
+        machine learning model that predicts game outcomes with a 70% accuracy
+        rate.
       </div>
 
       <strong>Key Features:</strong>
