--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     ></a>
                   </li>
                   <li>
-                    <a href="mailto:JustinHartfield1@gmail.com" target="_blank"
+                    <a href="mailto:justinhartfield1@gmail.com" target="_blank"
                       ><span class="ico-circle"
                         ><i class="icon ion-email"></i></span
                     ></a>
