--- a/html/about.html
+++ b/html/about.html
@@ -1,145 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>Justin Hartfield</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-
-  <link href="/img/favicon.png" rel="icon">
-  <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/lib/animate/animate.min.css" rel="stylesheet">
-  <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-
-  <!-- Main Stylesheet File -->
-  <link href="/css/style.css" rel="stylesheet">
-
-</head>
-
-<body id="page-top">
-
-  <nav class="navbar navbar-c navbar-trans navbar-expand-md fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll" href="../index.html">Portfolio</a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link js-scroll active" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="skills.html">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll" href="projects.html">Projects</a>
-          </li>
-        </ul>
+  <head>
+    <meta charset="utf-8">
+    <title>Justin Hartfield</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link href="/img/favicon.png" rel="icon">
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet">
+    <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <!-- Main Stylesheet File -->
+    <link href="/css/style.css" rel="stylesheet">
+  </head>
+  <body id="page-top">
+    <nav class="navbar navbar-c navbar-trans navbar-expand-md fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll" href="../index.html">Portfolio</a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <div class="navbar-collapse collapse justify-content-end" id="navbarDefault">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link js-scroll active" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="skills.html">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll" href="projects.html">Projects</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-
-  <section id="about" class="about-mf sect-pt4 route">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="box-shadow-full">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="row">
-                  <div class="col-sm-6 col-md-5">
-                    <div class="about-img">
-                      <img src="../img/headshottemp.png" class="img-fluid rounded b-shadow-a" alt="">
+    </nav>
+    <section id="about" class="about-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="box-shadow-full">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="row">
+                    <div class="col-sm-6 col-md-5">
+                      <div class="about-img">
+                        <img src="../img/headshottemp.png" class="img-fluid rounded b-shadow-a" alt="">
+                      </div>
+                    </div>
+                    <div class="col-sm-6 col-md-7">
+                      <div class="about-info">
+                        <p>
+                          <span class="title-s" style="font-size: 24px;">Justin Hartfield</span>
+                        </p>
+                        <p>
+                          <span class="title-s">Contact Information</span>
+                        </p>
+                        <p>
+                          <span>
+                            <a href="mailto:JustinHartfield1@gmail.com" style="color: #007BFF; text-decoration: underline;">JustinHartfield1@gmail.com</a>
+                          </span>
+                        </p>
+                        <p>
+                          <span>
+                            <a href="https://www.linkedin.com/in/justin-hartfield" target="_blank" style="color: #007BFF; text-decoration: underline;">www.linkedin.com/in/justin-hartfield</a>
+                          </span>
+                        </p>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-sm-6 col-md-7">
-                    <div class="about-info">
-                      <p><span class="title-s" style="font-size: 24px;">Justin Hartfield</span></p>
-<p><span class="title-s">Contact Information</span></p>
-<p><span><a href="mailto:JustinHartfield1@gmail.com" style="color: #007BFF; text-decoration: underline;">JustinHartfield1@gmail.com</a></span></p>
-<p><span><a href="https://www.linkedin.com/in/justin-hartfield" target="_blank" style="color: #007BFF; text-decoration: underline;">www.linkedin.com/in/justin-hartfield</a></span></p>
+                  <div class="skill-mf">
+                    <p class="title-s" style="font-size: 24px;">Programming Skills</p>
+                    <p class="title-s" style="font-size: 20px;">Languages:</p>
+                    <span>Python, JavaScript, Java, C++, C#, HTML/CSS, SQL</span>
+                    <br></br>
+                    <p class="title-s" style="font-size: 20px;">Frameworks & Libraries:</p>
+                    <span>React.js, Next.js, Django, Flask, Bootstrap, TailwindCSS, TensorFlow, NumPy, Pandas, PyTorch</span>
+                    <br></br>
+                    <p class="title-s" style="font-size: 20px;">Tools & Technologies:</p>
+                    <span>Jenkins, Git, GitLab CI/CD, Jira, Virtual Machines, Selenium, Swagger, Grafana, PostgreSQL, MongoDB, AWS</span>
+                    <br></br>
+                    <p class="title-s" style="font-size: 20px;">Leadership and Extracurriculars</p>
+                    <p>Member of Software Developers Association (SoDA) <br> Member of ASU Chess Club <br> Member of ASU AI Club <br> Member of the Phoenix Philanthropists volunteer group </p>
+                    <p class="title-s" style="font-size: 20px;">Resume</p>
+                    <a href="../img/JustinHartfield.pdf">
+                      <font color="blue">
+                        <u>Download resume</u>
+                      </font>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="about-me pt-4 pt-md-0">
+                    <div class="title-box-2">
+                      <h5 class="title-left"> About </h5>
                     </div>
+                    <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;"> Welcome! I’m <strong style="color: #007BFF;">Justin Hartfield</strong>, a Software Engineer from Phoenix, Arizona. Since earning my bachelor's degree in Computer Science from Arizona State University in May 2020, I’ve been dedicated to mastering the art of coding. </p>
+                    <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;"> This portfolio showcases my professional milestones, challenging projects, and innovations. Each project reflects my dedication, learning, and pursuit of excellence in software engineering. </p>
+                    <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;"> Beyond code, I enjoy working out, traveling, and playing chess and poker. </p>
+                    <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;"> Thank you for visiting my portfolio. Whether you’re a fellow engineer, potential collaborator, or just curious, I hope you find inspiration and insight here. Let’s connect and shape the future together, one line of code at a time. </p>
+                    <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                      <strong style="color: #007BFF;">Work History</strong>
+                    </p>
+                    <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                      <strong>iPro Tech – Tempe, AZ</strong>: SDET for eDiscovery company (2021-2024)
+                    </p>
+                    <ul style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
+                      <li>Developed and executed UI automation with Selenium and Playwright, using Python to validate product functionality through comprehensive testing.</li>
+                      <li>Enhanced API testing by streamlining functional acceptance and regression tests in C#, maintaining consistent and reliable quality standards.</li>
+                      <li>Integrated DevOps practices to streamline client, development, and test environment deployments. Established a robust CI/CD pipeline to improve efficiency throughout the software development lifecycle.</li>
+                    </ul>
                   </div>
-                </div>
-                <div class="skill-mf">
-                  <p class="title-s" style="font-size: 24px;">Programming Skills</p>
-    <p class="title-s" style="font-size: 20px;">Languages:</p>
-    <span>Python, JavaScript, Java, C++, C#, HTML/CSS, SQL</span>
-    <br></br>
-    <p class="title-s" style="font-size: 20px;">Frameworks & Libraries:</p>
-    <span>React.js, Next.js, Django, Flask, Bootstrap, TailwindCSS, TensorFlow, NumPy, Pandas, PyTorch</span>
-    <br></br>
-    <p class="title-s" style="font-size: 20px;">Tools & Technologies:</p>
-    <span>Jenkins, Git, GitLab CI/CD, Jira, Virtual Machines, Selenium, Swagger, Grafana, PostgreSQL, MongoDB, AWS</span>
-    <br></br>
-                  <p class="title-s" style="font-size: 20px;">Leadership and Extracurriculars</p>
-                  <p>Member of Software Developers Association (SoDA) <br>
-                    Member of ASU Chess Club <br>
-                    Member of ASU AI Club<br>
-                    Member of the Phoenix Philanthropists volunteer group
-                  </p>
-                  <p class="title-s" style="font-size: 20px;" >Resume</p>
-                  <a href="../img/JustinHartfield.pdf">
-                    <font color="blue"><u>Download resume</u></font>
-                  </a>
-
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="about-me pt-4 pt-md-0">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      About
-                    </h5>
-                  </div>
-                  <p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    Welcome! I’m <strong style="color: #007BFF;">Justin Hartfield</strong>, a Software Engineer from Phoenix, Arizona. Since earning my bachelor's degree in Computer Science from Arizona State University in May 2020, I’ve been dedicated to mastering the art of coding.
-</p>
-<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    This portfolio showcases my professional milestones, challenging projects, and innovations. Each project reflects my dedication, learning, and pursuit of excellence in software engineering.
-</p>
-<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    Beyond code, I enjoy working out, traveling, and playing chess and poker.
-</p>
-<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    Thank you for visiting my portfolio. Whether you’re a fellow engineer, potential collaborator, or just curious, I hope you find inspiration and insight here. Let’s connect and shape the future together, one line of code at a time.
-</p>
-<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    <strong style="color: #007BFF;">Work History</strong>
-</p>
-<p style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    <strong>iPro Tech – Tempe, AZ</strong>: SDET for eDiscovery company (2021-2024)
-</p>
-<ul style="font-size: 16px; color: #333; font-family: 'Arial', sans-serif;">
-    <li>Developed and executed UI automation with Selenium and Playwright, using Python to validate product functionality through comprehensive testing.</li>
-    <li>Enhanced API testing by streamlining functional acceptance and regression tests in C#, maintaining consistent and reliable quality standards.</li>
-    <li>Integrated DevOps practices to streamline client, development, and test environment deployments. Established a robust CI/CD pipeline to improve efficiency throughout the software development lifecycle.</li>
-</ul>
-
-                  
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-</body>
-
+    </section>
+  </body>
 </html>
